# GLProject

./: .gitignore  DEPLOYMENT.md  README.md
.github/workflows/: deploy.yml
DD_Engine/: CMakeLists.txt  DD_Core.cpp  DD_Core.h  DD_DXHelper.cpp  DD_DXHelper.h  DD_Device.cpp  DD_Device.h  DD_Engine.vcxproj  DD_Engine.vcxproj.filters  DD_GLDevice.cpp  DD_GLHelper.h  DD_SimpleBox.cpp  DD_SimpleBox.h  DD_TextureMananger.cpp  DD_TextureMananger.h  DD_UIMananger.cpp  DD_UIMananger.h  DD_WinApplication.cpp  DD_WinApplication.h  GL_Platform.h  framework.h  packages.config
DD_Engine/source/: DD_Actor.cpp  DD_Actor.h  DD_Application.cpp  DD_Application.h  DD_Camera.cpp  DD_Camera.h  DD_CameraController.cpp  DD_CameraController.h  DD_CollisionComponent.h  DD_CollisionUtils.cpp  DD_CollisionUtils.h  DD_Component.cpp  DD_Component.h  DD_Core.cpp  DD_Core.h  DD_DebugDraw.cpp  DD_DebugDraw.h  DD_DeferredRenderer.cpp  DD_DeferredRenderer.h  DD_GBuffer.cpp  DD_GBuffer.h  DD_GLDevice.cpp  DD_GLDevice.h  DD_GLHelper.h  DD_LightActor.cpp  DD_LightActor.h  DD_LightComponent.cpp  DD_LightComponent.h  DD_Material.cpp  DD_Material.h  DD_Mesh.cpp  DD_Mesh.h  DD_MeshComponent.cpp  DD_MeshComponent.h  DD_RenderTarget.cpp  DD_RenderTarget.h  DD_SceneRenderer.cpp  DD_SceneRenderer.h  DD_ShadowRenderer.cpp  DD_ShadowRenderer.h  (+9 more)
DD_Sample/: .gitignore  CMakeLists.txt  DD_Sample.cpp  DD_Sample.sln  DD_Sample.vcxproj  DD_Sample.vcxproj.filters  DEPLOYMENT.md  README.md  build-web.bat  build-web.sh  imgui.ini  shell.html
DD_Sample/.github/workflows/: deploy.yml
DD_Sample/docs/: index.html
docs/: index.template.html  readme.txt  shell.template.html
scripts/: prepare-samples.sh
